--- a/spring-batch/src/main/resources/application.yml
+++ b/spring-batch/src/main/resources/application.yml
@@ -24,4 +24,7 @@ spring:
 
 app:
   output-authors: C:\work\authors.txt
+  output-genres: C:\work\genres.txt
+  output-books: C:\work\books.txt
+  output-comments: C:\work\comments.txt
 
