--- a/work-react/src/main/resources/application.yml
+++ b/work-react/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: work-react
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.yml
   datasource:
